Fix post meta spacing

--- a/modules/theme-tools/compat/twentytwenty.css
+++ b/modules/theme-tools/compat/twentytwenty.css
@@ -294,3 +294,7 @@ iframe#wpnt-notes-iframe2.wide {
 .admin-bar {
 	position: unset !important;
 }
+
+.screen-reader-text {
+	position: absolute;
+}
